--- a/meterstab/send_email/email_template.html
+++ b/meterstab/send_email/email_template.html
@@ -8,8 +8,7 @@
     <body>
         Hallo $name, <br>
         <br>
-        du hast dich erfolgreich für den Holywood-Gottesdienst am
-        07.03.2021 angemeldet.<br>
+        du hast dich erfolgreich für die Meterstab-Aktion in der Jugenkirche angemeldet.<br>
         <br>
         Uhrzeit: <br>
         $time <br>
@@ -23,11 +22,11 @@
         $companions <br>
         <br>
         Die Anmeldung ist verbindlich. <br>
-        Solltest du doch nicht teilnehmen koennen<br>
+        Solltest du doch nicht teilnehmen können<br>
         oder wollen, dann storniere bitte deine Plätze über den untenstehenden Link. <br>
         Wir freuen uns auf deine Teilnahme! <br>
         <br>
-        Das Holywood-Team <br>
+        Christine, Annette und Robert <br>
         <br>
         Abmelden:<br>
         <a href="$url">$url</a>
