--- a/violett/send_email/email_template.html
+++ b/violett/send_email/email_template.html
@@ -11,7 +11,7 @@
         du hast dich erfolgreich für unseren Fastenimpuls VIOLETT – imPuls der Fastenzeit angemeldet.<br>
         <br>
         Uhrzeit: <br>
-        Dienstag 25.3. 19:03Uhr – 20:15 Uhr<br>
+        Dienstag 25.3. 19:30Uhr – 20:15 Uhr<br>
         <br>
         Ort: <br>
         Evangelische Jugendkirche München (Rogatekirche)<br>
@@ -30,6 +30,7 @@
         <br>
         Bitte beachte: <br>
         Es gelten die allgemeinen Abstandsregeln beim Eintritt und Verlassen der Kirche sowie während des Abendimpulses. <br>
+        Das Tragen einer FFP2 Maske ist Voraussetzung. <br>
         <br>
         Abmelden:<br>
         <a href="$url">$url</a>
