email template update

--- a/violett/send_email/email_template.html
+++ b/violett/send_email/email_template.html
@@ -12,6 +12,7 @@
         <br>
         Uhrzeit: <br>
         Dienstag 25.3. 19:30Uhr – 20:15 Uhr<br>
+        Einlass in die Kirche ab 19:00 Uhr <br>
         <br>
         Ort: <br>
         Evangelische Jugendkirche München (Rogatekirche)<br>
